[package]
name = "clavus"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
colored = "2.1.0"
dirs = "5.0.1"
edit = "0.1.5"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
which = "6.0.1"
